--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1270,6 +1270,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(55 48 163 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
 .hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
@@ -1658,10 +1662,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:mt-2 {
     margin-top: 0.5rem;
-  }
-
-  .lg\:block {
-    display: block;
   }
 
   .lg\:h-48 {
